--- a/SourceNetUI/src/index.html
+++ b/SourceNetUI/src/index.html
@@ -7,6 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+ </style>
 </head>
 <body>
   <app-root></app-root>
